--- a/src/content/docs/development/boba-backend/getting-started.mdx
+++ b/src/content/docs/development/boba-backend/getting-started.mdx
@@ -4,6 +4,8 @@ sidebar:
   order: 1
 ---
 
+import { Aside } from '@astrojs/starlight/components';
+
 :::important
 
 Before continuing with this section, **follow the installation instructions** in
@@ -81,14 +83,14 @@ You can test the server is running by opening
 see a list of all the realm properties in
 [JSON format](https://developers.squarespace.com/what-is-json).
 
-:::tip
+<Aside type="tip">
 
 Accessing a URL through a browser is equivalent to making a GET request to the
 same URL through [Postman](/docs/development/boba-backend/using-postman).
 
-:::
+</Aside>
 
-:::tip
+<Aside type="tip">
 
 **The above commands will automatically restart the server on any code change
 you make. **
@@ -106,4 +108,4 @@ Both of these actions need to be performed on the console where
 
 </details>
 
-:::
+</Aside>
