--- a/src/content/docs/development/boba-backend/permissions/check-permissions.mdx
+++ b/src/content/docs/development/boba-backend/permissions/check-permissions.mdx
@@ -98,9 +98,4 @@ threads and posts contained within. See the
 [`boards/{board_id}`](/docs/development/rest-api/#operation/getBoardsByUuid)
 endpoint for details.
 
-:::TODO
-
-Create documentation about checking permissions on the client and add a link
-here.
-
-:::
+{/* TODO: Create documentation about checking permissions on the client and add a link here. */}
