--- a/src/content/docs/development/boba-backend/permissions/testing-permissions.mdx
+++ b/src/content/docs/development/boba-backend/permissions/testing-permissions.mdx
@@ -9,16 +9,8 @@ sidebar:
 To test routes that require a specific permission, the permission must first be
 granted to a user in the test database.
 
-:::TODO
+{/* TODO: Test something by mocking a permission handler, then expand this section. */}
 
-Test something by mocking a permission handler, then expand this section.
+{/* TODO: ## Testing permission handlers
 
-:::
-
-## Testing permission handlers
-
-:::TODO
-
-Write a test for a permission handler, then expand this section.
-
-:::
+Write a test for a permission handler, then expand this section. */}
