--- a/src/content/docs/development/contribute/before-you-start.mdx
+++ b/src/content/docs/development/contribute/before-you-start.mdx
@@ -4,11 +4,13 @@ sidebar:
   order: 1
 ---
 
+import { Aside } from '@astrojs/starlight/components';
+
 Before you start, consider reading the [codebase overview](../intro) to
 understand the different areas of the project and the technologies used in each
 of them.
 
-:::tip
+<Aside type="tip">
 
 **You don't need to have deep knowledge of all involved technologies/programming
 languages to contribute to BobaBoard.** You also don't need to be a
@@ -18,7 +20,7 @@ As long as you're willing to put in the effort to learn, Ms. Boba will be very
 happy to guide you in the process. After all, every explanation she gives makes
 this documentation better.
 
-:::
+</Aside>
 
 :::note
 
@@ -56,18 +58,12 @@ codebase and its state. Once you agree on the issue you're going to be tackling,
 she will create a WIP document defining the goal of the projects and the
 relevant steps. She will also guide you in installing the relevant codebases.
 
-:::tip
+<Aside type="tip">
 
 If you want to explore the codebase on your own, look at the Setting up your Dev
 Env page.
 
-:::
-
-:::note
-
-TODO[Ms.Boba]: I REALLY should have a "contact me" page.
-
-:::
+</Aside>
 
 ## Step 3 - Keep in touch (and submit code)
 
@@ -88,17 +84,17 @@ ready. You can
 [learn more about the development lifecycle](../knowledge-base/development-lifecycle)
 in our knowledge base.
 
-:::tip
+<Aside type="tip">
 
 The unstable and early nature of the codebase makes it even more important to
 break up your changes in smaller chunks! Ms. Boba can help break down tasks in
 manageable pieces!
 
-:::
+</Aside>
 
-:::tip
+<Aside type="tip">
 
 Ms. Boba is really friendly and loves to info dump! If you're blocked or
 confused, reach out to her for help!
 
-:::
+</Aside>
