--- a/src/content/docs/development/contribute/boba-backend.mdx
+++ b/src/content/docs/development/contribute/boba-backend.mdx
@@ -4,6 +4,8 @@ sidebar:
   order: 4
 ---
 
+import { Aside } from '@astrojs/starlight/components';
+
 :::warning
 
 **Make sure you have [Docker](https://www.docker.com/products/docker-desktop)
@@ -34,12 +36,12 @@ cd boba-backend
 yarn install
 ```
 
-:::tip
+<Aside type="tip">
 
 The commands shown on this page use HTTPS to interact with the code on GitHub
 but you can do so with SSH if you're comfortable
 
-:::
+</Aside>
 
 ### 2 — Add the BobaBoard repository as a remote
 
