--- a/src/content/docs/development/contribute/boba-frontend.mdx
+++ b/src/content/docs/development/contribute/boba-frontend.mdx
@@ -31,12 +31,7 @@ yarn install
 
 ## Develop
 
-:::TODO
-
-Move these instructions to the `boba-frontend` section, similar to how it's done
-in the `boba-backend` install instructions.
-
-:::
+{/* TODO: Move these instructions to the `boba-frontend` section, similar to how it's done in the `boba-backend` install instructions. */}
 
 ### Connect to a local `boba-backend` (default Realm)
 
