--- a/src/content/docs/users/self-hosting/bobaboard-installation.mdx
+++ b/src/content/docs/users/self-hosting/bobaboard-installation.mdx
@@ -1,5 +1,5 @@
 ---
-title: Installing BobaBoard 
+title: Installing BobaBoard
 sidebar:
   order: 2
 ---
@@ -22,12 +22,7 @@ with getting your server set up, head back to
 
 ## Installing BobaBoard on a NixOS Server
 
-:::TODO
-
-This page currently contains notes from the live self-hosting demo. It needs to
-be expanded and reviewed.
-
-:::
+{/* TODO: This page currently contains notes from the live self-hosting demo. It needs to be expanded and reviewed. */}
 
 You can install Bobaboard on the server the same way you installed other
 programs. (See example)
