--- a/src/content/docs/volunteering/coding/github/labels.mdx
+++ b/src/content/docs/volunteering/coding/github/labels.mdx
@@ -3,6 +3,8 @@ title: Issue Labels
 draft: true
 ---
 
+import { Aside } from '@astrojs/starlight/components';
+
 BobaBoard uses labels to classify issues and feature requests according to a
 variety of criteria.
 
@@ -29,11 +31,11 @@ macro-categories:
 We also have a set of [**other labels**](#other-labels) that do not fit in these
 categories.
 
-:::tip
+<Aside type="tip">
 
 Click on any label to see the associated issues.
 
-:::
+</Aside>
 
 ## Thematic labels
 
