--- a/src/content/docs/volunteering/coding/github/structure.mdx
+++ b/src/content/docs/volunteering/coding/github/structure.mdx
@@ -2,10 +2,8 @@
 title: How BobaBoard uses GitHub
 sidebar:
   order: 1
+draft: true
 ---
 
-:::TODO
+{/* TODO: Write an overview of how BobaBoard uses GitHub for various roles and tasks. */}
 
-Write an overview of how BobaBoard uses GitHub for various roles and tasks.
-
-:::
