--- a/src/content/docs/volunteering/communications/editing-bobadocs.mdx
+++ b/src/content/docs/volunteering/communications/editing-bobadocs.mdx
@@ -4,6 +4,8 @@ sidebar:
   order: 1
 ---
 
+import { Aside } from '@astrojs/starlight/components';
+
 This guide will show you how to edit BobaDocs, the website that you're looking
 at _right now._
 
@@ -43,13 +45,13 @@ Here are the steps to do this:
 
 ![a cropped screenshot of the bobadocs github page, with a red arrow pointing to the fork button](/img/volunteer/bobadocsfork.jpg)
 
-:::tip
+<Aside type="tip">
 
 By the way! To do this right, you'd also need to branch. Read our
 [knowledge base](/docs/volunteering/coding/github/understanding-github) to learn
 more about branching.
 
-:::
+</Aside>
 
 ### Keeping your files updated
 
@@ -72,14 +74,14 @@ this easy to do. Here's how you get to it:
    your copy of the files. _Use this editor._ Like before, you can tell you're
    in the right place if `[USERNAME]/bobadocs` appears on the top left.
 
-:::tip
+<Aside type="tip">
 
 Remember how the last tip mentioned branching? That last bullet is there to keep
 you from accidentally creating a branch (something outside the scope of this
 guide). If you do create a new branch and need to delete it, see the
 [appendix](./editing-bobadocs-appendix/#deleting-a-branch) for how to do that.
 
-:::
+</Aside>
 
 ## Step 2: Make your edits
 
@@ -110,7 +112,7 @@ Use this tab often. Clicking the "Show diff" button on the top right of preview
 will highlight the changes you've made to the file, making it easy to see what
 you've done so far. Use show diff often.
 
-:::tip
+<Aside type="tip">
 
 Notice how GitHub's preview doesn't look exactly the same as the page on
 Docusaurus? That's because Docusaurus makes use of tools that GitHub's editor
@@ -118,7 +120,7 @@ doesn't, such as HTML or page metadata at the top of the file. If you're going
 to use these in GitHub's editor, take extra care and leave plenty of space
 between different elements to avoid errors.
 
-:::
+</Aside>
 
 Once you're satisfied with your changes, it's time to save them. Scroll down the
 page.
