--- a/src/content/docs/volunteering/community/our-bubbles.mdx
+++ b/src/content/docs/volunteering/community/our-bubbles.mdx
@@ -4,6 +4,8 @@ sidebar:
   order: 1
 ---
 
+import { Aside } from '@astrojs/starlight/components';
+
 BobaBoard's volunteers collaborate using
 [a sociocratic concept called "circles"](https://www.sociocracyforall.org/organizational-circle-structure-in-sociocracy/).
 Since this is BOBAboard, however, we opted to call our circles "bubbles" 😉
@@ -31,11 +33,13 @@ organization. Any decisions outside the domains of the more specialized bubble.
 Adjudication of other bubbles' domains if there is ever confusion over who is
 responsible for what.
 
-:::tip **Not sure whose job it is?**
+<Aside type="tip" title="Not sure whose job it is?">
 
 The buck stops with Steering! If you don't know which bubble should handle
 something, or whether your bubble is ALLOWED to handle something, you can ask
-Steering to sort it out. :::
+Steering to sort it out.
+
+</Aside>
 
 ### Boba Builders Bubble ("B^3")
 
