--- a/src/content/docs/volunteering/experience/code-of-conduct.mdx
+++ b/src/content/docs/volunteering/experience/code-of-conduct.mdx
@@ -4,14 +4,16 @@ sidebar:
   order: 15
 ---
 
+import { Aside } from '@astrojs/starlight/components';
+
 This guide goes over the code of conduct for BobaBoard's volunteers.
 
-:::tip
+<Aside type="tip">
 
 **This document and the surrounding processes are a living document.**
 Volunteers are empowered to propose changes, adjustments and additions.
 
-:::
+</Aside>
 
 ## Code of conduct
 
@@ -23,7 +25,7 @@ itself. At the same time, because of the nature of fandom spaces, the range of
 topics discussed is likely to exceed what would be appropriate in a conventional
 workplace.
 
-:::tip Values at a glance
+<Aside type="tip" title="Values at a glance">
 
 - Be mindful and courteous to fellow volunteers.
 - Value de-escalation of conflict.
@@ -34,7 +36,7 @@ workplace.
 - Act honestly and in good faith.
 - Assume good faith from others, until clearly proven otherwise.
 
-:::
+</Aside>
 
 **Fandom communities have historically been diverse and sometimes prone to
 conflict over how to properly relate to and experience their varied interests,**
