--- a/src/content/docs/volunteering/experience/intro.mdx
+++ b/src/content/docs/volunteering/experience/intro.mdx
@@ -2,6 +2,8 @@
 title: The Volunteer Experience™
 ---
 
+import { Aside } from '@astrojs/starlight/components';
+
 ## Why Volunteer
 
 As part of volunteering with us, you'll get to:
@@ -45,20 +47,11 @@ wish to propose changes, believe we're falling short of our commitments, or have
 other concerns, you can open an issue on GitHub, contact Ms. Boba, or take
 advantage of our anonymous volunteering feedback form.
 
-:::TODO
-
-[Ms Boba] Create an anonymous volunteers feedback form, and a standard "how to
-discuss X" template.
-
-:::
+{/* TODO: Create an anonymous volunteers feedback form, and a standard "how to discuss X" template. */}
 
 ## Volunteering Expectations
 
-:::TODO
-
-Rewrite this section!
-
-:::
+{/* TODO: Rewrite this section! */}
 
 While BobaBoard strives to embody the chaotic and transgressive spirit of some
 corners of transformative fandom, **we expect volunteers and staff to approach
@@ -74,12 +67,12 @@ volunteer**. This means volunteers are expected to:
 - Proactively let us know how we can help make their experience better, or
   smooth out problems for them.
 
-:::tip
+<Aside type="tip">
 
 If life or other issues get in the way of a commitment you've made, <ins>let us
 know</ins>! We'll reassign the task with no judgement.
 
-:::
+</Aside>
 
 **This project is fully committed to diversity, equity and inclusion.** If we
 can provide accommodations to improve your experience (such as breaking down
