--- a/src/content/docs/volunteering/experience/volunteer-application.mdx
+++ b/src/content/docs/volunteering/experience/volunteer-application.mdx
@@ -13,12 +13,7 @@ perfect! However, if you find yourself frequently thinking you can't or don't
 want to do these things while reading the list, BobaBoard may not be a good
 cultural fit for you.
 
-
-:::TODO
-
-Highlight the must haves
-
-:::
+{/* TODO: Highlight the must haves /*}
 
 ### General Traits
 
