--- a/src/content/docs/volunteering/general/leading-a-retro.mdx
+++ b/src/content/docs/volunteering/general/leading-a-retro.mdx
@@ -2,6 +2,8 @@
 title: Leading a Retrospective
 ---
 
+import { Aside } from '@astrojs/starlight/components';
+
 The retrospective lead helps facilitate the retrospective keeping it on track
 and on time. They also look out for any issues that might arise, redirecting the
 discussion as necessary or taking other moderation actions.
@@ -11,13 +13,13 @@ a blameless process**. A retrospective must focus on finding solutions to issues
 that improve processes, and the language used by participants must adhere to
 [the prime directive of retrospectives](https://retrospectivewiki.org/index.php?title=The_Prime_Directive):
 
-:::tip The Prime Directive of Retrospectives
+<Aside type="tip" title="The Prime Directive of Retrospectives">
 
 "Regardless of what we discover, **we understand and truly believe that everyone
 did the best job they could**, given what they knew at the time, their skills
 and abilities, the resources available, and the situation at hand."
 
-:::
+</Aside>
 
 ## The Lead "Jobs"
 
@@ -42,12 +44,12 @@ The retrospective lead:
    - If the disruption continues, **call for a timeout and discuss further
      actions with other moderators.**
 
-:::tip
+<Aside type="tip">
 
 A productive retrospective is a shared goal. While the lead has the ultimate
 responsibility for the above, every participant is empowered to help!
 
-:::
+</Aside>
 
 ### Starting a Retrospective
 
