--- a/src/content/docs/development/intro.mdx
+++ b/src/content/docs/development/intro.mdx
@@ -4,6 +4,8 @@ sidebar:
   order: 1
 ---
 
+import { Aside } from '@astrojs/starlight/components';
+
 BobaBoard's codebase is split within 4 separate repositories, each with its own
 purpose and set of technologies:
 
@@ -54,12 +56,12 @@ Since other BobaBoard codebases should not interact with this format directly,
 **boba-editor also exports utilities to manipulate the Delta format itself**
 (e.g. extracting images for upload, removing trailing spaces, etc).
 
-:::tip
+<Aside type="tip">
 
 **Edit this codebase if:** you want to give users more input options, including
 embeds, images and gifs.
 
-:::
+</Aside>
 
 ## boba-components
 
@@ -72,13 +74,13 @@ separate from the "frontend/server logic" as possible to facilitate reuse and
 [StoryBook](https://storybook.js.org/), which you can see in action at this
 [demo link](https://bobaboard-ui.netlify.app/).
 
-:::tip
+<Aside type="tip">
 
 **Edit this codebase if:** you want to improve the functionality/look of
 specific boba-components elements, like buttons, contributions, sidebar
 elements, thread stems, etc.
 
-:::
+</Aside>
 
 ## boba-frontend
 
@@ -89,12 +91,12 @@ user experience, putting together the components defined in boba-components (see
 above) into logical pages, and handling the communication between the user and
 the server. Based on [NextJS](https://nextjs.org/).
 
-:::tip
+<Aside type="tip">
 
 **Edit this codebase if:** you want to change how UI elements come together to
 create pages like boards, threads, settings and the related user flows.
 
-:::
+</Aside>
 
 ## boba-backend
 
@@ -109,9 +111,9 @@ BobaBoard's PostgreSQL DB.
 Other technologies used include a [Redis Cache](https://redis.io/) and
 [Jest](https://jestjs.io/) for testing.
 
-:::tip
+<Aside type="tip">
 
 **Edit this codebase if:** you want to add new functionality to BobaBoard that
 goes beyond the interaction with the user (or fix existing bugs).
 
-:::
+</Aside>
