--- a/src/content/docs/project/features/identities/bobadex.mdx
+++ b/src/content/docs/project/features/identities/bobadex.mdx
@@ -18,8 +18,4 @@ A `BobaDex` can be further divided in `Seasons`, each containing a subset of the
 
 :::
 
-:::TODO
-
-Fill this!
-
-:::
+{/* TODO: Fill this! */}
